--- a/index.html
+++ b/index.html
@@ -65,25 +65,25 @@
   <div class="breadcrumbs"></div>
   <div class="cover ">
     <h1 class="cover"><span><span>opticonnect</span></span> <span><span>sdk</span></span></h1>
-    <div class="platform-hinted UnderCoverText" data-platform-hinted="data-platform-hinted"><div class="content sourceset-dependent-content" data-active="" data-togglable=":opticonnectsdk:dokkaHtml/release"><p class="paragraph">OptiConnect SDK enables seamless integration with <a href="https://opticon.com/">Opticon</a>'s BLE <a href="https://opticon.com/product/opn-2500/">OPN-2500</a> and <a href="https://opticon.com/product/opn-6000/">OPN-6000</a> barcode scanners. This SDK allows you to manage Bluetooth Low Energy (BLE) connections, handle scanner data streams, and programmatically control scanner settings via commands.</p><h2 class="">Features</h2><ul><li><p class="paragraph">Bluetooth discovery and connection management for OPN-2500 and OPN-6000 BLE scanners.</p></li><li><p class="paragraph">Real-time data streaming, including barcode data reception and BLE device state monitoring.</p></li><li><p class="paragraph">Programmatic control of scanner settings (e.g., scan modes, illumination, connection pooling, etc.).</p></li><li><p class="paragraph">Exclusive connection management: Ensure stable device pairing in multi-device environments by assigning unique connection pool IDs, preventing previously paired devices from hijacking active connections.</p></li><li><p class="paragraph">Command management and customization for BLE services and scanner configurations.</p></li></ul><h2 class="">Getting Started</h2><h3 class="">1. Prerequisites</h3><ul><li><p class="paragraph">Opticon BLE <a href="https://opticon.com/product/opn-2500/">OPN-2500</a> or <a href="https://opticon.com/product/opn-6000/">OPN-6000</a> barcode scanner(s).</p></li></ul><table style="width: 100%; text-align: center; table-layout: fixed;">
+    <div class="platform-hinted UnderCoverText" data-platform-hinted="data-platform-hinted"><div class="content sourceset-dependent-content" data-active="" data-togglable=":opticonnectsdk:dokkaHtml/release"><p class="paragraph">OptiConnect SDK enables seamless integration with <a href="https://opticon.com/">Opticon</a>'s BLE <a href="https://opticon.com/product/opn-2500/">OPN-2500</a> and <a href="https://opticon.com/product/opn-6000/">OPN-6000</a> barcode scanners. This SDK allows you to manage Bluetooth Low Energy (BLE) connections, handle scanner data streams, and programmatically control scanner settings via commands.</p><h2 class="">Features</h2><ul><li><p class="paragraph">Bluetooth discovery and connection management for OPN-2500 and OPN-6000 BLE scanners.</p></li><li><p class="paragraph">Real-time data streaming, including barcode data reception and BLE device state monitoring.</p></li><li><p class="paragraph">Programmatic control of scanner settings (e.g., scan modes, illumination, connection pooling, etc.).</p></li><li><p class="paragraph">Exclusive connection management: Ensure stable device pairing in multi-device environments by assigning unique connection pool IDs, preventing previously paired devices from hijacking active connections.</p></li><li><p class="paragraph">Command management and customization for BLE services and scanner configurations.</p></li></ul><h2 class="">Getting Started</h2><h3 class="">1. Prerequisites</h3><p class="paragraph">At least one of the following Opticon BLE barcode scanners is required:</p><table style="width: 100%; text-align: center; table-layout: fixed; margin-top: 10px;">
     <tr>
         <td style="width: 50%; border: 1px solid #ddd; border-radius: 8px; padding: 10px; box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1); vertical-align: middle;">
             <div style="display: flex; flex-direction: column; align-items: center; height: 200px; position: relative;">
-                <div style="flex-grow: 1; display: flex; align-items: center; justify-content: center;">
-                    <img src="images/OPN-2500.png" alt="OPN-2500" style="max-width: 150px; height: auto;">
+                <div style="flex-grow: 1; display: flex; align-items: center; justify-content: center;">                    
+					<img src="images/OPN-2500.png" alt="OPN-2500" style="max-width: 150px; height: auto;">
                 </div>
                 <div style="position: absolute; bottom: 0px; font-weight: bold;">
-                    OPN-2500
+                    <a href="https://opticon.com/product/opn-2500/" target="_blank" style="text-decoration: none; color: inherit;">OPN-2500</a>
                 </div>
             </div>
         </td>
         <td style="width: 50%; border: 1px solid #ddd; border-radius: 8px; padding: 10px; box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1); vertical-align: middle;">
             <div style="display: flex; flex-direction: column; align-items: center; height: 200px; position: relative;">
-                <div style="flex-grow: 1; display: flex; align-items: center; justify-content: center;">
-                    <img src="images/OPN-6000.png" alt="OPN-6000" style="max-width: 150px; height: auto;">
+                <div style="flex-grow: 1; display: flex; align-items: center; justify-content: center;">                    
+					<img src="images/OPN-6000.png" alt="OPN-6000" style="max-width: 150px; height: auto;">
                 </div>
                 <div style="position: absolute; bottom: 0px; font-weight: bold;">
-                    OPN-6000
+                    <a href="https://opticon.com/product/opn-6000/" target="_blank" style="text-decoration: none; color: inherit;">OPN-6000</a>
                 </div>
             </div>
         </td>
